--- a/event.html
+++ b/event.html
@@ -17,7 +17,7 @@
 
 <header>
                 <div class="header_app">
-                <div class="header_logo">
+                <div class="header_page">
                <button class="buttonmem" onclick="goToWebsite('index.html')"> <span class="mdi mdi-arrow-left"></span></button>
                 <h3>Detail</h3>
                 <div class="taggg">
