--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   
   <!-- HTML -->
   
-
+    <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@7.3.67/css/materialdesignicons.min.css">
   <!-- Custom Styles -->
   <link rel="stylesheet" href="style.css">
 </head>
@@ -132,10 +133,95 @@
 
 
      </div>
+   <div class="meet-greet">
+        <div class="text-mng">
+        <h1>Virtual Meet & Greet</h1>
+        <span>19 November 2023</span>
+        </div><br>
+           <div class="meet-greet-container">
+                  <div class="box-session">
+                          <div class="box-box-session">
+
+                          </div>
+                          <div class="box-box-session">
+                      <span class="mdi mdi-checkbox-marked-circle"></span>
+                      <p>Session 1<br>~13:00-14:00</p>
+                          </div>
+                          <div class="box-box-session">
+                      <span class="mdi mdi-checkbox-marked-circle"></span>
+                      <p>Session 2<br>~15:00-16:00</p>
+                          </div>
+                          <div class="box-box-session">
+                                  <span class="mdi mdi-checkbox-marked-circle"></span>
+                              <p>Session 3<br>~17:00-18:00</p>
+                          </div>
+                  </div>
+                  <div class="box-room">
+                          <div class="box-box-session">
+                                <p>Room 1</p>
+                          </div>
+                          <div class="box-box-room">
+                                  <br>
+                                  <img src="memberimg/ute.jpg">
+                                  <p>Ute</p><br>
+                          </div>
+                          <div class="box-box-room">
+                                                            <br>
+                                                            <img src="memberimg/nat.jpg">
+                                                            <p>Nat</p><br>
+                                                    </div>
+                          <div class="box-box-room">
+                                                            <br>
+                                                            <img src="memberimg/ura.jpg">
+                                                            <p>Ura</p><br>
+                                           </div>
+                  </div>
+                  <div class="box-room">
+                          <div class="box-box-session">
+                                  <p>Room 2</p>
+                          </div>
+                          <div class="box-box-room">
+                                  <br>
+                                  <img src="memberimg/liz.jpg">
+                                  <p>Liz</p><br>
+                          </div>
+                          <div class="box-box-room">
+                                  <br>
+                                  <img src="memberimg/rea.jpg">
+                                  <p>Rea</p><br>
+                          </div>
+                          <div class="box-box-room">
+                                  <br>
+                                  <img src="memberimg/rin.jpg">
+                                  <p>Rin</p><br>
+                          </div>
+                  </div>
+                  <div class="box-room">
+                          <div class="box-box-session">
+                                <p>Room 3</p>
+                          </div>
+                          <div class="box-box-room">
+                                  <br><br>
+                          </div>
+                          <div class="box-box-room">
+                                                            <br>
+                                                            <img src="memberimg/fia.jpg">
+                                                            <p>Fia</p><br>
+                                                    </div>
+                          <div class="box-box-room">
+                                                            <br>
+                                                            <img src="memberimg/vey.jpg">
+                                                            <p>Vey</p><br>
+                                                    </div>
+                  </div>
+                  
+                  
+           </div>
+   </div>
 </section>
 
 
-
+<br><br><br><br>
 
 
 
