--- a/index.html
+++ b/index.html
@@ -218,6 +218,40 @@
                   
            </div>
    </div>
+   <div class="program-text">
+        <div class="text-program">
+        <h1>Program Schedule</h1>
+        <span>November 2023</span>
+        </div>
+        <div class="seemore-program">
+        <p>More</p>
+        <span class="mdi mdi-chevron-right"></span>
+        </div>
+   </div>
+     <div class="program-h-container">
+             <button class="buttonmem" onclick="goToWebsite('')"><div class="program-h-box">
+                     <img src="img/logo_idn_app.b557eeeb.svg">
+                    <div class="tagline">
+                     <span class="tag_mshow">Program</span>
+                    <span class="tag_upg">Up Girls</span>
+                    </div>
+                    <div class="program-detail">
+                            <h2>UPgirls Romanticize Romance, K-Drama, & Korean Food Party!</h2>
+                            <span>Sab, 11 Nov • 18:00</span>
+                    </div>
+             </div></button>
+             <button class="buttonmem" onclick="goToWebsite('')"><div class="program-h-box">
+                     <img src="img/logo_idn_app.b557eeeb.svg">
+                    <div class="tagline">
+                     <span class="tag_mshow">Program</span>
+                    <span class="tag_upg">Up Girls</span>
+                    </div>
+                    <div class="program-detail">
+                            <h2>UPgirls Romanticize Romance, K-Drama, & Korean Food Party!</h2>
+                            <span>Sab, 4 Nov • 17:00</span>
+                    </div>
+             </div></button>
+     </div>
 </section>
 
 
