--- a/index.html
+++ b/index.html
@@ -238,6 +238,7 @@
                     <div class="program-detail">
                             <h2>UPgirls Romanticize Romance, K-Drama, & Korean Food Party!</h2>
                             <span>Sab, 11 Nov • 18:00</span>
+                            <p>IDN App</p>
                     </div>
              </div></button>
              <button class="buttonmem" onclick="goToWebsite('')"><div class="program-h-box">
@@ -249,6 +250,7 @@
                     <div class="program-detail">
                             <h2>UPgirls Romanticize Romance, K-Drama, & Korean Food Party!</h2>
                             <span>Sab, 4 Nov • 17:00</span>
+                            <p>IDN App</p>
                     </div>
              </div></button>
      </div>
