--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
        
         <div class="text-sc">
         <h1>Up Girls Schedule</h1>
-        <span>23 - 24 November 2023</span>
+        <span>Event & Show 2023</span>
         </div>
      <div class="event-h-container">
              <button class="buttonmem" onclick="goToWebsite('event.html')"><div class="event-h-box">
@@ -120,14 +120,14 @@
                     </div>
              </div></button>
              <button class="buttonmem" onclick="goToWebsite('event.html')"><div class="event-h-box">
-                     <img src="imgeventban/minishow24nov.jpg">
+                     <img src="imgeventban/upgirlsevent.jpg">
                     <div class="tagline">
                      <span class="tag_mshow">Mini Show</span>
                     <span class="tag_upg">Up Girls</span>
                     </div>
                     <div class="event-detail">
-                            <h2>Minishow Up Girls Carousel</h2>
-                            <span>Jum, 24 Nov • 15:30</span>
+                            <h2>The Upgirls Presents Mini Show</h2>
+                            <span>Min, 29 Okt • 16:00</span>
                     </div>
              </div></button>
 
