--- a/index.html
+++ b/index.html
@@ -254,6 +254,44 @@
                     </div>
              </div></button>
      </div>
+
+
+   <div class="program-text">
+        <div class="text-program">
+        <h1>Album & Single</h1>
+        <span>Terpopuler</span>
+        </div>
+        <div class="seemore-program">
+        <p>More</p>
+        <span class="mdi mdi-chevron-right"></span>
+        </div>
+   </div>
+     <div class="program-h-container">
+             <button class="buttonmem" onclick="goToWebsite('')"><div class="program-h-box">
+                     <img src="posteralbum/mentari.jpeg">
+                    <div class="tagline">
+                     <span class="tag_mshow">Music</span>
+                    <span class="tag_upg">Up Girls</span>
+                    </div>
+                    <div class="program-detail">
+                            <h2>Mentari</h2>
+                            <span>di Publish pada : 16 Januari 2023</span>
+                            <span>4 rb × ditonton </span>
+                    </div>
+             </div></button>
+             <button class="buttonmem" onclick="goToWebsite('')"><div class="program-h-box">
+                     <img src="posteralbum/rasa-ini.jpeg">
+                    <div class="tagline">
+                     <span class="tag_mshow">Music</span>
+                    <span class="tag_upg">Up Girls</span>
+                    </div>
+                    <div class="program-detail">
+                            <h2>Rasa Ini</h2>
+                            <span>di Publish pada : 22 Agustus 2023</span>
+                            <span>13 rb × ditonton </span>
+                    </div>
+             </div></button>
+     </div>
 </section>
 
 
