--- a/member.html
+++ b/member.html
@@ -40,44 +40,44 @@
                 </div>
         </div>
         <div class="member-perform">
-                <div class="member-perform-box">
+                <div class="member-list-box">
                         <img src="memberimg/una.jpg">
                         <span>Una</span>
                 </div>
-                <div class="member-perform-box">
+                <div class="member-list-box">
                         <img src="memberimg/rin.jpg">
                         <span>Rin</span>
                 </div>
-                <div class="member-perform-box">
+                <div class="member-list-box">
                         <img src="memberimg/rea.jpg">
                         <span>Rea</span>
                 </div>
-                <div class="member-perform-box">
+                <div class="member-list-box">
                         <img src="memberimg/ute.jpg">
                         <span>Ute</span>
                 </div>
-                <div class="member-perform-box">
+                <div class="member-list-box">
                         <img src="memberimg/fia.jpg">
                         <span>Fia</span>
                 </div>
-                <div class="member-perform-box">
+                <div class="member-list-box">
                         <img src="memberimg/vey.jpg">
                         <span>Vey</span>
                 </div>
-                <div class="member-perform-box">
+                <div class="member-list-box">
                         <img src="memberimg/nat.jpg">
                         <span>Nat</span>
                 </div>
-                <div class="member-perform-box">
+                <div class="member-list-box">
                         <img src="memberimg/ura.jpg">
                         <span>Ura</span>
                 </div>
 
-                <div class="member-perform-box">
+                <div class="member-list-box">
                         <img src="memberimg/dee.jpg">
                         <span>Dee</span>
                 </div>
-                <div class="member-perform-box">
+                <div class="member-list-box">
                         <img src="memberimg/liz.jpg">
                         <span>Liz</span>
                 </div>
