--- a/member.html
+++ b/member.html
@@ -33,7 +33,7 @@
         <div class="text-perform">
                 <div class="perform-text-by">
                 <h1>UPgirls Member</h1>
-                <span>UPgirls</span>
+                <span>10 Member</span>
                 </div>
                 <div class="tagg">
                <span class="tag_mshow_e">Up Girls</span>
