--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
         
 function tampilkanDetailEvent(eventId) {
             // Mengarahkan ke halaman detail lagu sesuai lagu yang dipilih
-            window.top.location.href = 'event.html?event=' + eventId;
+            window.top.location.href = 'event_detail.html?event=' + eventId;
             
             return false;
         }
