--- a/member.html
+++ b/member.html
@@ -40,10 +40,10 @@
                 </div>
         </div>
         <div class="member-perform">
-                <div class="member-list-box">
+                <button class="buttonmem" onclick="goToWebsite('member_detail.html')"><div class="member-list-box">
                         <img src="memberimg/una.jpg">
                         <span>Una</span>
-                </div>
+                </div></button>
                 <div class="member-list-box">
                         <img src="memberimg/rin.jpg">
                         <span>Rin</span>
