--- a/member_detail.html
+++ b/member_detail.html
@@ -48,58 +48,10 @@
 <section class="performed" style="margin-top: 300px;">
         <div class="text-perform">
                 <div class="perform-text-by">
-                        <span>Performed by</span>
-                        <h1>Up Girls</h1>
-                </div>
-                <div class="tagg">
-                        <span class="tag_mshow_e">Up Girls</span>
+                        <h1>Profile</h1>
                 </div>
         </div>
-        <div class="member-perform">
-                <div class="member-perform-box">
-                        <img src="memberimg/una.jpg">
-                        <span id=mem1></span>
-                </div>
-                <div class="member-perform-box">
-                        <img src="memberimg/rin.jpg">
-                        <span id="mem2"></span>
-                </div>
-                <div class="member-perform-box">
-                        <img src="memberimg/rea.jpg">
-                        <span id="mem3"></span>
-                </div>
-                <div class="member-perform-box">
-                        <img src="memberimg/ute.jpg">
-                        <span id="mem4"></span>
-                </div>
-                <div class="member-perform-box">
-                        <img src="memberimg/fia.jpg">
-                        <span id="mem5"></span>
-                </div>
-                <div class="member-perform-box">
-                        <img src="memberimg/vey.jpg">
-                        <span id="mem6"></span>
-                </div>
-                <div class="member-perform-box">
-                        <img src="memberimg/nat.jpg">
-                        <span id="mem7"></span>
-                </div>
-                <div class="member-perform-box">
-                        <img src="memberimg/ura.jpg">
-                        <span id="mem8"></span>
-                </div>
 
-                <div class="member-perform-box">
-                        <img src="memberimg/dee.jpg">
-                        <span id="mem9"></span>
-                </div>
-                <div class="member-perform-box">
-                        <img src="memberimg/liz.jpg">
-                        <span id="mem10"></span>
-                </div>
-
-
-        </div>
 </section>
 <br>
 <br><br>
