--- a/member_detail.html
+++ b/member_detail.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Up Girls App - Event</title>
+  <title>Up Girls App - Detail Member</title>
   
   <!-- HTML -->
   
@@ -45,10 +45,10 @@
         </div>
 </section>
 
-<section class="performed" style="margin-top: 300px;">
+<section class="performed" style="margin-top: 295px;">
         <div class="text-perform">
                 <div class="perform-text-by">
-                        <h1>Profile</h1>
+                        <h1 style="font-weight: 400;">Profile</h1>
                 </div>
         </div>
 
