--- a/member_detail.html
+++ b/member_detail.html
@@ -35,7 +35,7 @@
                         <div class="nama-member">
                                 <span>Angeline Natasya</span>
                                 <p style="margin-top: 5px; color: #9958FF; font-weight:  500;">Nat</p>
-                                <p>Nat⭐</p>
+                                <p></p>
                         </div>
                 </div>
               <div class="nav-member">
@@ -51,40 +51,77 @@
                         <h1 style="font-weight: 400;">Profile</h1>
                 </div>
         </div>
+<div class="profile-member-container">
+        <br>
+        <div class="profile-member-box">
+                <p>Team/Status</p>
+                <div class="isi">
+                <h2>UPgirls</h2></div>
+        </div><br>
+        <span>-------------------------------------------------------------------------------------------------</span><br>
+        <div class="profile-member-box">
+                <p>Position</p>
+                <div class="isi">
+                <h2>Tidak ada data</h2></div>
+        </div><br>
+        <span>-------------------------------------------------------------------------------------------------</span><br>
+        <div class="profile-member-box">
+                <p>Birthday</p>
+                <div class="isi">
+                <h2>8 September 2002</h2></div>
+        </div><br>
+        <span>-------------------------------------------------------------------------------------------------</span><br>
+        <div class="profile-member-box">
+                <p>Horoskop </p>
+                <div class="isi">
+                <h2>Virgo</h2></div>
+        </div><br>
+</div>
 
+        <div class="text-perform">
+                <div class="perform-text-by">
+                        <h1 style="font-weight: 400; margin-top: 30px;">Socials</h1>
+                </div>
+        </div>
+
+<div class="social-container">
+<div class="social-box">
+ <img src="socialimg/instagram.png">
+               <button class="buttonmem" onclick="goToWebsite('')"><div class="nama-sc">
+                        <p>Instagram</p>
+                        <span>@aangelinenatasya</span>
+                </div>
+        </div></button>
+<div class="social-box">
+                <img style="height: 50px" src="socialimg/twitterX.png">
+               <button class="buttonmem" onclick="goToWebsite('')"><div class="nama-sc">
+                        <p>X</p>
+                        <span>@natasyangeline</span>
+                </div>
+        </div></button>
+<div class="social-box">
+                <img src="socialimg/threads.png">
+               <button class="buttonmem" onclick="goToWebsite('')"><div class="nama-sc">
+                        <p>Threads</p>
+                        <span>@aangelinenatasya</span>
+                </div>
+        </div></button>
+
+                       <div class="social-box">
+                        <img src="socialimg/tiktok.png">
+               <button class="buttonmem" onclick="goToWebsite('')"><div class="nama-sc">
+                                <p>TikTok</p>
+                                <span>@aangelinenatasya</span>
+                        </div>
+                </div></button>
+        
+        
+</div>
 </section>
 <br>
 <br><br>
 <br><br>
-<br><br>
-<br><br>
-<br><br>
-<br><br>
-<br><br>
-<br><br>
-<br><br>
-<br><br>
-<br><br>
-<br><br>
-<br><br>
-<br><br>
-<br><br>
-<br><br>
-<br><br>
-<br><br>
-<br><br>
-<br><br>
-<br><br>
-<br><br>
-<br><br>
-<br><br>
-<br><br>
-<br><br>
-<br><br>
-<br><br>
-<br><br>
-<br><br>
-<br>
+
   <!-- Project -->
   <script src="event-data.js"></script>
   <script src="main.js"></script>
