--- a/member_detail.html
+++ b/member_detail.html
@@ -114,6 +114,13 @@
                                 <span>@aangelinenatasya</span>
                         </div>
                 </div></button>
+                       <div class="social-box">
+                        <img src="socialimg/fanmate.png">
+               <button class="buttonmem" onclick="goToWebsite('')"><div class="nama-sc">
+                                <p>Fanmate</p>
+                                <span>upgirlsnat</span>
+                        </div>
+                </div></button>
         
         
 </div>
