--- a/member_detail.html
+++ b/member_detail.html
@@ -31,7 +31,7 @@
 <section class="member-detail-page">
         <div class="member-detail-container">
                 <div class="member-detail-box">
-                        <img src="memberimg/nat.jpg">
+                        <img src="" id="imgMember">
                         <div class="nama-member">
                                 <span id="namaMember"></span>
                                 <p style="margin-top: 5px; color: #9958FF; font-weight:  500;" id="namaPanggilan"></p>
