--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
    <div class="program-text">
         <div class="text-program">
         <h1>Program Schedule</h1>
-        <span>November 2023</span>
+        <span>Program Live UPgirls</span>
         </div>
         <div class="seemore-program">
         <p>More</p>
