--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         <span>Program Live UPgirls</span>
         </div>
         <div class="seemore-program">
-        <p>More</p>
+       <button class="buttonmem" onclick="goToWebsite('program_sc.html')" <p>More</p>
         <span class="mdi mdi-chevron-right"></span>
         </div>
    </div>
