--- a/program_sc.html
+++ b/program_sc.html
@@ -18,7 +18,7 @@
 <header>
                 <div class="header_app" style="border-bottom: 0px solid;">
                 <div class="header_page">
-      <button class="buttonmem" onclick="goToHome('member.html')"><span class="mdi mdi-arrow-left"></span></button>
+      <button class="buttonmem" onclick="goToHome('index.html')"><span class="mdi mdi-arrow-left"></span></button>
                 <h3>Program Schedule</h3>
   
                 </div>
